fixed spacing of contact section

--- a/src/style.css
+++ b/src/style.css
@@ -195,6 +195,10 @@ body {
   width: 100%;
 }
 
+.contact-description{
+  margin:0;
+}
+
 .location {
   border: 0;
   margin-top: .5em;
